--- a/src/global.css
+++ b/src/global.css
@@ -235,7 +235,7 @@
     @apply h-64 xs:h-[400px] lg:h-[450px] w-full rounded-[24px] object-cover mb-5;
   }
 
-  /* Topbar */
+  /* TopBar */
   .topbar {
     @apply sticky top-0 z-50 md:hidden bg-dark-2 w-full;
   }
